--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codeitnowin/barcode",
+    "name": "TokyHeriniainaRak/barcode",
     "description": "Symfony2 Barcode generator library by http://www.codeitnow.in. You can use it with Custom PHP application or any PHP Framework such as Laravel, Cakephp, Yii, Codeigneter etc.",
     "keywords": ["barcode", "generator", "symfony", "symfony2", "Laravel", "Cakephp"],
     "homepage": "http://www.codeitnow.in",
